--- a/sections/main-cart-items.liquid
+++ b/sections/main-cart-items.liquid
@@ -196,17 +196,6 @@
                   </td>
 
                   <td class="cart-item__quantity">
-
-              
-                    {% for tag in item.product.tags %}
-                        {% if tag == "5_limited" and item.quantity > 5 and tag == "3_limited" and item.quantity > 3 %}
-                            <div class="bs-callout bs-callout-danger">
-                                <b>Please fix the errors above before trying to continue.</b>
-                            </div>
-                        {% endif %}
-                    {% endfor %}
-                    
-
                     <div class="cart-item__quantity-wrapper">
                       <label class="visually-hidden" for="Quantity-{{ item.index | plus: 1 }}">
                         {{ 'products.product.quantity.label' | t }}
@@ -221,6 +210,7 @@
                           name="updates[]"
                           value="{{ item.quantity }}"
                           min="0"
+                          {% for tag in product.tags %}{% if tag == "3_limited" %}max="3"{% elsif tag == "5_limited" %}max="5"{% endif %}{% endfor %}
                           aria-label="{{ 'products.product.quantity.input_label' | t: product: item.product.title | escape }}"
                           id="Quantity-{{ item.index | plus: 1 }}"
                           data-index="{{ item.index | plus: 1 }}"
@@ -296,22 +286,6 @@
                     </div>
                   </td>
                 </tr>
-
-                {% for tag in item.product.tags %}
-                {% if tag == "5_limited" and item.quantity > 5 %}
-                    <tr class="bs-callout bs-callout-warning">
-                        <td colspan="5">
-                            <b>Limit 5 per customer.</b>
-                        </td>
-                    </tr>
-                {% elsif tag == "3_limited" and item.quantity > 3 %}
-                <tr class="bs-callout bs-callout-warning">
-                  <td colspan="3">
-                      <b>Limit 3 per customer.</b>
-                  </td>
-                </tr>
-                {% endif %}
-                {% endfor %}
               {%- endfor -%}
             </tbody>
           </table>
