limit product qty per product for per user

--- a/sections/main-cart-items.liquid
+++ b/sections/main-cart-items.liquid
@@ -206,7 +206,7 @@
                           {% render 'icon-minus' %}
                         </button>
                         <input class="quantity__input"
-                        
+                          style="pointer-events: none !important;"
                           type="number"
                           name="updates[]"
                           value="{{ item.quantity }}"
