--- a/sections/main-cart-items.liquid
+++ b/sections/main-cart-items.liquid
@@ -206,7 +206,11 @@
                           {% render 'icon-minus' %}
                         </button>
                         <input class="quantity__input"
+                          {% for tag in item.product.tags %}
+                          {% if tag == "3_limited" or elsif tag == "5_limited" %}
                           style="pointer-events: none !important;"
+                          {% endif %}
+                          {% endfor %}
                           type="number"
                           name="updates[]"
                           value="{{ item.quantity }}"
