limit product qty per product for per user

--- a/sections/main-cart-items.liquid
+++ b/sections/main-cart-items.liquid
@@ -207,7 +207,7 @@
                         </button>
                         <input class="quantity__input"
                           {% for tag in item.product.tags %}
-                          {% if tag == "3_limited" or elsif tag == "5_limited" %}
+                          {% if tag == "3_limited" or tag == "5_limited" %}
                           style="pointer-events: none !important;"
                           {% endif %}
                           {% endfor %}
