--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -291,7 +291,7 @@
                 <input class="quantity__input"
                     {% for tag in product.tags %}
                     {% if tag == "3_limited" or tag == "5_limited" %}
-                    style="pointer-events: none !important;"
+                    disabled
                     {% endif %}
                     {% endfor %}
                     type="number"
